--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
-    "include": [
-        "./src/**/*"
-    ],
-    "compilerOptions": {
-        "strict": true,
-        "esModuleInterop": true,
-        "lib": [
-            "dom",
-            "es2015"
-        ],
-        "jsx": "react-jsx"
+  "compilerOptions": {
+    "allowJs": true,
+    "outDir": "./dist",  
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
+    "baseUrl": ".", 
+    "paths": {
+      "@views/*": ["src/views/*"]
     }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
