--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@mui/x-date-pickers": "^7.23.1",
+    "@supabase/supabase-js": "^2.47.2",
     "@vitejs/plugin-react": "4.3.4",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.1",
